[gd_scene load_steps=33 format=3 uid="uid://3nvn0q3vdyra"]

[ext_resource type="Script" uid="uid://mgllh2m6aey3" path="res://Enemy/enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://dxyiobfunbyt" path="res://Player/Assets/Orc_Hit.png" id="2_ncf7h"]
[ext_resource type="Texture2D" uid="uid://d2lkvb1ftg5hn" path="res://Player/Assets/Orc_Idle.png" id="3_m6jha"]
[ext_resource type="Texture2D" uid="uid://brp1mm8ajj863" path="res://Player/Assets/Orc_Walk.png" id="4_glvfu"]
[ext_resource type="Texture2D" uid="uid://c7u8pbt0nffbb" path="res://Player/Assets/Orc-shadow.png" id="5_0rspp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_efk13"]

[sub_resource type="CircleShape2D" id="CircleShape2D_px1sc"]
radius = 58.0

[sub_resource type="AtlasTexture" id="AtlasTexture_o28un"]
atlas = ExtResource("2_ncf7h")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n471f"]
atlas = ExtResource("2_ncf7h")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emwf"]
atlas = ExtResource("2_ncf7h")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hshwv"]
atlas = ExtResource("2_ncf7h")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpjlu"]
atlas = ExtResource("2_ncf7h")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_btcbx"]
atlas = ExtResource("3_m6jha")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwnis"]
atlas = ExtResource("3_m6jha")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k53q1"]
atlas = ExtResource("3_m6jha")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhl08"]
atlas = ExtResource("3_m6jha")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtle1"]
atlas = ExtResource("3_m6jha")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_od3ui"]
atlas = ExtResource("3_m6jha")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tjw"]
atlas = ExtResource("4_glvfu")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3vf3"]
atlas = ExtResource("4_glvfu")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = ExtResource("4_glvfu")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = ExtResource("4_glvfu")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = ExtResource("4_glvfu")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6f8"]
atlas = ExtResource("4_glvfu")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpta"]
atlas = ExtResource("4_glvfu")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmf2"]
atlas = ExtResource("4_glvfu")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_nmr1a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o28un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n471f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hshwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpjlu")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btcbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwnis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k53q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhl08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtle1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od3ui")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_00tjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3vf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfmf2")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pisgm"]
atlas = ExtResource("5_0rspp")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ygp"]
atlas = ExtResource("5_0rspp")
region = Rect2(0, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_47ove"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisgm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ygp")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncf7h"]
bg_color = Color(3.497e-08, 0.03295347, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m6jha"]
bg_color = Color(0.014491917, 0.35960013, 0, 1)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(0.6, 0.6)
collision_layer = 2
collision_mask = 6
script = ExtResource("1_4gyqm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3.535, 3.535)
shape = SubResource("CapsuleShape2D_efk13")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(22.555, 0)
scale = Vector2(0.84, 0.84)
shape = SubResource("CircleShape2D_px1sc")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.25490198, 0.1764706, 1)
z_index = 5
position = Vector2(-3.8146973e-06, -9.536743e-07)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_nmr1a")
animation = &"hit"

[node name="ShadowSprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.7764706)
z_index = 4
position = Vector2(0, 7.93)
scale = Vector2(3.655, 3.655)
sprite_frames = SubResource("SpriteFrames_47ove")
animation = &"idle"

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(60, 10)
offset_left = -29.999998
offset_top = 54.999996
offset_right = 30.000002
offset_bottom = 67.99999
theme_override_styles/background = SubResource("StyleBoxFlat_ncf7h")
theme_override_styles/fill = SubResource("StyleBoxFlat_m6jha")
show_percentage = false

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
